--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "corresponding-wildlife",
+   "id": "respected-stadium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "japanese-coverage",
+   "id": "adjacent-speaker",
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "enormous-vessel",
+   "execution_count": 43,
+   "id": "proof-transfer",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        " {\"text\": \"2\\u4ef6\\u76ee\\n\\u51fa\\u767a\\u5e97\\u8217:\\u30c8\\u30e8\\u30bf\\u30ec\\u30f3\\u30bf\\u30ea\\u30fc\\u30b9\\u540d\\u53e4\\u5c4b\\u8c4a\\u6a4b\\u9ad8\\u5e2b\\u5e97\\uff08\\u611b\\u77e5\\u770c\\u8c4a\\u6a4b\\u5e02\\uff09\\n\\u8fd4\\u5374\\u5e97\\u8217:\\u30c8\\u30e8\\u30bf\\u30e2\\u30d3\\u30ea\\u30c6\\u30a3\\u30b5\\u30fc\\u30d3\\u30b9\\u8fd4\\u5374\\u53ef\\u80fd\\u5e97\\u8217\\uff08\\u4e0b\\u8a18\\u53c2\\u7167\\uff09\\n\\u51fa\\u767a\\u671f\\u9593:2021\\u5e743\\u670830\\u65e5\\uff5e4\\u67081\\u65e5\\n\\u8eca\\u7a2e:\\u30e4\\u30ea\\u30b9 \\u8eca\\u4e21\\u756a\\u53f73698\\n\\u8eca\\u4e21\\u6761\\u4ef6:\\u7981\\u7159\\u30fb\\uff15\\u4eba\\u4e57\\u308a\\n\\u4e88\\u7d04\\u96fb\\u8a71\\u756a\\u53f7:0120-921-758\", \"type\": \"text\"}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,13 +96,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "offshore-expert",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\"text\": \"\\u3042\", \"type\": \"text\"}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = TextSendMessage(text='あ')\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "informal-humanity",
+   "id": "assisted-devices",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "m = TextSendMessage(text"
-   ]
+   "source": []
   }
  ],
  "metadata": {
