--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "about-ready",
+   "id": "marine-harvard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acute-ocean",
+   "id": "understanding-michigan",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "animated-kansas",
+   "id": "environmental-shaft",
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +135,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "explicit-housing",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-03697133038e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"message\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"text\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mli\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'text' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "li = {}\n",
+    "row = \"message\"\n",
+    "li[type] = \"text\"\n",
+    "li[text] = row\n",
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "quantitative-capitol",
+   "id": "otherwise-yield",
    "metadata": {},
    "outputs": [],
    "source": []
